# SimBrief-MCPServer

./: README.md  glama.json  pyproject.toml  server.py  smithery.yaml
.github/workflows/: ci.yml
tests/: conftest.py  test_config.py  test_helpers.py  test_tools.py
